	* Added protocol icons to various drop-down boxes
	* New Send IM buddy icon merged from Ximian Desktop 2
	* Fixed "Sort by Status" crash
	* Fixed the MSN signon crash
	* Fixed the MSN add buddy crash
	* Fixed the MSN empty buddy list bug
	* Fixed all known MSN chat bugs
	* Fixed HTTP redirect handling in smiley retrieval. This fixes the
	  problems with some smiley themes.
	* MSN Alerts and incoming MSN pages no longer pop up several error dialogs
	* Ability to view iChat "Available" messages for AIM
	* Stores your buddy icon on the server for AIM
	* Support for non-ascii characters with Yahoo! Messenger
	* Focus returns to the input box when you click elsewhere, like it used to

version 0.64 (05/29/2003):
	* Buddy list sorting in buddy list preferences.
	* Improved debug window with timestamps and pause buttons.
	* New core/ui split notification and request APIs.
	* New mail notification dialog.
	* Several bug fixes in MSN.
	* Conversation window buddy icon bugs were fixed.

version 0.63 (05/16/2003):
	* A rewrite of the plugin API. Plugin authors will need to change their
	  code based off the changes found in other plugins.
	* Perl script support is now provided in the perl plugin.
	* Debugging is core/ui split, and has a new API with support for
	  debug levels and categories.
	* Support for adding chats to your buddy list.
	* MSN protocol plugin was rewritten, has experimental buddy icon
	  support, and MSN Mobile support.
	* Thanks to all the various people who submitted translation updates.
	* Buddy list speed enhancements (Thanks Ethan Blanton).
	* Napster protocol updates (Thanks Auke Kok).

version 0.62 (04/23/2003):
	* Keyboard shortcuts in the buddy list work again (Thanks Joe 
	  Clarke).
	* Support for Jabber XHTML messages
	* Updated a number of translations. Thanks to everyone who submitted
	  a translation update.
	* Ability to re-request authorization from ICQ and Jabber users by right 
	  clicking on them in your buddy list.